refactor: Update dependencies and improve state management
Replaces CDN links with ESM imports for better module resolution and caching.
Introduces `immer` for robust state cloning in the undo/redo history, preventing issues with non-serializable objects like AudioBuffers.
Updates `vite.config.ts` to remove the deprecated `base` config and other build settings, relying on default Vite behavior.
Fixes typing issues in `ErrorBoundary` component by explicitly extending `React.Component`.
Adjusts the return type of `stopRecording` to accurately reflect the optional nature of `buffer`.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Nova DAW | Pro Workstation</title>
-  <script src="https://js.stripe.com/v3/"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lamejs@1.2.1/lame.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://js.stripe.com/v3/"></script> <!-- STRIPE SDK AJOUTÉ -->
+  <script src="https://cdn.jsdelivr.net/npm/lamejs@1.2.1/lame.min.js"></script> <!-- LAMEJS POUR MP3 ENCODING -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -173,9 +174,23 @@
         border-bottom: 1px solid #64748b;
     }
   </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0",
+    "jszip": "https://esm.sh/jszip@3.10.1",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "zustand": "https://esm.sh/zustand@^5.0.9",
+    "immer": "https://esm.sh/immer@^11.1.3"
+  }
+}
+</script>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
